# wmr-simulator

./: .gitignore  README.md  _requirements.txt  pyproject.toml  requirements.txt
docs/: 4_robot_model.md  5_planner.md  6_controller.md  7_estimator.md  8_full_system_architecture.md
notes/: JAX_notes.md  estimator_notes.md
problems/: curve.yaml  empty.yaml  empty_noise_and_slip.yaml  experiments.yaml  figure_eight.yaml  oval.yaml  problem_hidden.yaml  spinning.yaml  straight.yaml
scripts/: simulator.py  simulator_jax.py
src/wmr_simulator/: Gain_tuning_tests.py  SI_tests.py  SI_visualization.py  controller.py  controller_jax.py  estimator.py  estimator_jax.py  planner.py  robot.py  robot_jax.py  simultaneous_optimization.py  simultaneous_optimization_online.py  system_identification.py  system_identification_multi_experiments.py  system_identification_multi_experiments_with_val.py  system_identification_step_loss.py  trajectory_optimization.py  visualize.py  visualize_jax.py
visualize/: simulation_visualization.html
visualize/archive/: simulation_visualization.html  simulation_visualization_jax.html  simulation_visualization_noisy.html
